--- a/example/index.html
+++ b/example/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Threesy Line Chart</title>
-    <script src="../dist/threesy-line.js"></script>
-    <link rel="stylesheet" href="../dist/threesy-line.css">
+    <script src="../build/threesy-line.js"></script>
+    <link rel="stylesheet" href="../build/threesy-line.css">
 </head>
 <body>
 <div id="chart"></div>
