--- a/example/index.html
+++ b/example/index.html
@@ -20,6 +20,8 @@
     ];
 
     var linechart = new ThreesyLine({
+        height: 300,
+        width: 600,
         element: "#chart",
         classes: ["threesy-line-chart", "line-chart"],
         data: data
