--- a/example/index.html
+++ b/example/index.html
@@ -1,47 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Threesy Line Chart</title>
-    <script src="../build/threesy-line.js"></script>
-    <link rel="stylesheet" href="../build/threesy-line.css">
-</head>
-<body>
-<div id="chart"></div>
+<meta charset="UTF-8">
+<title>Threesy Line Chart</title>
+<script src="../build/threesy-line.js"></script>
+<link rel="stylesheet" href="../build/threesy-line.css">
+<style>
+    .container {
+        width: 900px;
+        padding: 40px 100px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+    }
+
+    button {
+        height: 30px;
+        width: 80px;
+        border-radius: 2px;
+        background-color: #fff;
+        border: 1px solid #CCC;
+    }
+    
+    button:hover {
+        background-color: #EEEEEE;
+        cursor: pointer;
+    }
+
+    button:active {
+        background-color: #E0E0E0;
+        box-shadow: inset 0 0 8px #BDBDBD;
+    }
+
+    button:focus {
+        outline: 0;
+    }
+</style>
+<div class="container">
+    <div id="chart"></div>
+    <button type="button" id="update-btn">UPDATE</button>
+</div>
 <script>
-    var data = [
-        {x: "Sunday", y: 2},
-        {x: "Monday", y: 3},
-        {x: "Tuesday", y: 1},
-        {x: "Wednesday", y: 6},
-        {x: "Thursday", y: 4},
-        {x: "Friday", y: 7},
-        {x: "Saturday", y: 1}
-    ];
+  var data = [
+    {x: "Sunday", y: Math.random()},
+    {x: "Monday", y: Math.random()},
+    {x: "Tuesday", y: Math.random()},
+    {x: "Wednesday", y: Math.random()},
+    {x: "Thursday", y: Math.random()},
+    {x: "Friday", y: Math.random()},
+    {x: "Saturday", y: Math.random()}
+  ];
 
-    var linechart = new ThreesyLine({
-        height: 300,
-        width: 600,
-        element: "#chart",
-        classes: ["threesy-line-chart", "line-chart"],
-        data: data
-    });
+  var linechart = new ThreesyLine({
+    height: 300,
+    width: 600,
+    element: "#chart",
+    classes: ["threesy-line-chart", "line-chart"],
+    data: data
+  });
 
-    linechart.draw();
+  linechart.draw();
 
-    data = [
-      {x: "Sunday", y: 3},
-      {x: "Monday", y: 3},
-      {x: "Tuesday", y: 5},
-      {x: "Wednesday", y: 7},
-      {x: "Thursday", y: 3},
-      {x: "Friday", y: 0},
-      {x: "Saturday", y: 12}
-    ];
+  var updateBtn = document.getElementById("update-btn");
 
-    setTimeout(() => {
-      linechart.update(data, true);
-    }, 2000);
+  updateBtn.onclick = () => {
+    data.forEach((d) => d.y = Math.random());
+
+    linechart.update(data, true);
+  };
 </script>
-</body>
-</html>
