Add tooltip support.

--- a/example/index.html
+++ b/example/index.html
@@ -2,7 +2,11 @@
 <meta charset="UTF-8">
 <title>Threesy Line Chart</title>
 <script src="../build/threesy-line.js"></script>
+<script src="../node_modules/tether/dist/js/tether.js"></script>
+<script src="../node_modules/tether-drop/dist/js/drop.js"></script>
+<script src="../node_modules/tether-tooltip/dist/js/tooltip.js"></script>
 <link rel="stylesheet" href="../build/threesy-line.css">
+<link rel="stylesheet" href="../node_modules/tether-tooltip/dist/css/tooltip-theme-arrows.css">
 <style>
     .container {
         width: 900px;
