--- a/example/index.html
+++ b/example/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
 <title>Threesy Line Chart</title>
+<!-- Tether tooltip JS dependencies -->
+<script src="tether.min.js"></script>
+<script src="drop.min.js"></script>
+<script src="tooltip.min.js"></script>
+
+<!-- ThreesyLine dependencies. Styles can be overriden -->
 <script src="../dist/threesy-line.js"></script>
-<script src="../node_modules/tether/dist/js/tether.js"></script>
-<script src="../node_modules/tether-drop/dist/js/drop.js"></script>
-<script src="../node_modules/tether-tooltip/dist/js/tooltip.js"></script>
 <link rel="stylesheet" href="../dist/threesy-line.css">
-<link rel="stylesheet" href="../node_modules/tether-tooltip/dist/css/tooltip-theme-arrows.css">
+
+<!-- Tether tooltip CSS dependency -->
+<link rel="stylesheet" href="tooltip-theme-arrows.css">
 <style>
     .container {
         width: 900px;
