update example folders.

--- a/example/index.html
+++ b/example/index.html
@@ -2,16 +2,16 @@
 <meta charset="UTF-8">
 <title>Threesy Line Chart</title>
 <!-- Tether tooltip JS dependencies -->
-<script src="tether.min.js"></script>
-<script src="drop.min.js"></script>
-<script src="tooltip.min.js"></script>
+<script src="js/tether.min.js"></script>
+<script src="js/drop.min.js"></script>
+<script src="js/tooltip.min.js"></script>
 
 <!-- ThreesyLine dependencies. Styles can be overriden -->
 <script src="../dist/threesy-line.js"></script>
 <link rel="stylesheet" href="../dist/threesy-line.css">
 
 <!-- Tether tooltip CSS dependency -->
-<link rel="stylesheet" href="tooltip-theme-arrows.css">
+<link rel="stylesheet" href="css/tooltip-theme-arrows.css">
 <style>
     .container {
         width: 900px;
