--- a/example/index.html
+++ b/example/index.html
@@ -42,6 +42,11 @@
     button:focus {
         outline: 0;
     }
+
+    .tooltip-element {
+        font-family: "proxima-nova", "Helvetica Neue", sans-serif;
+        font-size: 0.8em;
+    }
 </style>
 <div class="container">
     <div id="chart"></div>
@@ -62,7 +67,7 @@
     {x: "Saturday", y: Math.random()}
   ];
 
-  var linechart = new ThreesyLine({
+  var chart = new ThreesyLine({
     height: 300,
     width: 600,
     element: "#chart",
@@ -70,7 +75,15 @@
     data: data
   });
 
-  linechart.draw();
+  var getValue = ThreesyLine.getValue;
+
+  chart.draw();
+
+  // Enable tooltips using Tether tooltip.
+  chart.dataPoints
+      .attr("data-tooltip", (d) =>
+          `${getValue(chart.accessorX, d)}: ${getValue(chart.accessorY, d).toFixed(3)}`)
+      .attr("data-tooltip-position", "top center");
 
   var updateBtn = document.getElementById("update-btn");
   var togglePointsBtn = document.getElementById("toggle-data-points");
@@ -78,14 +91,14 @@
 
   updateBtn.onclick = () => {
     data.forEach((d) => d.y = Math.random());
-    linechart.update(data, true);
+    chart.update(data, true);
   };
 
   togglePointsBtn.onclick = () => {
-    linechart.toggleDataPoints();
+    chart.toggleDataPoints();
   };
 
   toggleGridLines.onclick = () => {
-    linechart.toggleGridLines();
+    chart.toggleGridLines();
   };
 </script>
